<resources>
    <string name="app_name">PlaylistMaker</string>
    <string name="settings">Настройки</string>
    <string name="media_library">Медиатека</string>
    <string name="search">Поиск</string>
    <string name="button_settings_share">Поделиться приложением</string>
    <string name="button_settings_support">Написать в поддержку</string>
    <string name="button_settings_terms_of_use">Пользовательское соглашение</string>
    <string name="header_main_text">Playlist maker</string>
    <string name="switch_dark_theme_text">Темная тема</string>
    <string name="settings_support_subject_message">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="setting_supports_text_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="settings_support_email">dmitryoreskin@gmail.com</string>
    <string name="settings_agreement_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="settings_share_text">https://practicum.yandex.ru/android-developer/</string>
    <string name="search_hint">Поиск</string>
    <string name="search_name">Поиск</string>
    <string name="placeholder_track_name">Track Title</string>
    <string name="placeholder_artist_name">Artist Name</string>
    <string name="placeholder_track_time">Track Time</string>
    <string name="something_went_wrong">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="text_update_button">Обновить</string>
    <string name="clear_history_button">Очистить историю</string>
    <string name="history_label">Вы искали</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="style">Жанр</string>
    <string name="country">Страна</string>
    <string name="chooser_title">Выберите приложение:</string>
    <string name="library_empty">Ваша медиатека пуста</string>
    <string name="playlist_empty">Вы не создали \n ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="rationale_permission_message">Необходимо разрешение для просмотра галереи</string>
    <string name="title_playlist_dialog">Завершить создание плейлиста?</string>
    <string name="message_playlist_dialog">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="complete">Завершить</string>
    <string name="playlist">Плейлист</string>
    <string name="created">создан</string>
    <string name="added">Добавлено в плейлист</string>
    <string name="already_added">Трек уже добавлен в плейлист</string>
    <string name="my_playlists">my_playlists</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="no_playlists">Вы не создали ни одного плейлиста</string>
    <string name="placeholder_image">placeholder_image</string>
    <string name="cover">cover</string>
    <string name="playlist_name">Название*</string>
    <string name="play_list_discription">Описание</string>
    <string name="create_playlist">Создать</string>
    <string name="nothing_added">Вы еще не добавили ни одного трека</string>
    <string name="empty_track_list">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="delete_track">Хотите удалить трек?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="share">Поделиться</string>
    <string name="edit_Information">Редактировать информацию</string>
    <string name="delete">Удалить плейлист</string>
    <string name="delete_playlist">Хотите удалить плейлист</string>
    <string name="changed">изменен</string>
    <string name="edit_title">Редактировать</string>
    <string name="save_playlist">Сохранить</string>

    <plurals name="tracks">
        <item quantity="zero">нет треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>

    <plurals name="minutes">
        <item quantity="one">%1$d минута</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>

</resources>