<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/bottom_sheet_menu"
    android:background="@drawable/bottom_sheet"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <View
        android:layout_width="50dp"
        android:layout_height="4dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_8dp"
        android:background="@drawable/rounder" />

    <include
        android:id="@+id/bottom_sheet_menu_item"
        layout="@layout/item_view_bottom_sheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="12dp" />

    <TextView
        android:id="@+id/tvShare"
        android:fontFamily="@font/ys_display_regular"
        android:textColor="?attr/general_text_color"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="21dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:foreground="?android:selectableItemBackgroundBorderless"
        android:text="@string/share" />

    <TextView
        android:id="@+id/tvEdit"
        android:fontFamily="@font/ys_display_regular"
        android:textColor="?attr/general_text_color"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="21dp"
        android:foreground="?android:selectableItemBackgroundBorderless"
        android:text="@string/edit_Information" />

    <TextView
        android:id="@+id/tvDelete"
        android:fontFamily="@font/ys_display_regular"
        android:textColor="?attr/general_text_color"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="21dp"
        android:foreground="?android:selectableItemBackgroundBorderless"
        android:text="@string/delete" />
</LinearLayout>