<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main_background_color"
    android:orientation="vertical"
    android:fontFamily="@font/yandex_sans_text_medium"
    android:padding="25dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/header_main_text"
        android:textColor="@color/header_main_color"
        android:paddingBottom="2dp"
        android:fontFamily="@font/yandex_sans_text_medium"
        android:textSize="22sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/main_button_search"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/button_background_main"
            android:text="@string/search"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/color_text_main_menu"
            app:icon="@drawable/search"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/button_main_icon_distance_to_text"
            app:iconTint="@color/black"
            app:cornerRadius="@dimen/button_main_corner_radius"
            android:fontFamily="@font/yandex_sans_text_medium"
            android:letterSpacing="-0.01"
            android:foreground="?attr/selectableItemBackground"
            android:textSize="@dimen/button_main_size" />

        <Button
            android:id="@+id/main_button_media_library"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/button_background_main"
            android:text="@string/media_library"
            android:textAllCaps="false"
            android:textColor="@color/color_text_main_menu"
            app:icon="@drawable/media_library"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/button_main_icon_distance_to_text"
            app:iconTint="@color/black"
            app:cornerRadius="@dimen/button_main_corner_radius"
            android:fontFamily="@font/yandex_sans_text_medium"
            android:letterSpacing="-0.01"
            android:foreground="?attr/selectableItemBackground"
            android:textSize="@dimen/button_main_size" />

        <Button
            android:id="@+id/main_button_settings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/button_background_main"
            android:text="@string/settings"
            android:textAllCaps="false"
            android:textColor="@color/color_text_main_menu"
            app:icon="@drawable/settings"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/button_main_icon_distance_to_text"
            app:iconTint="@color/black"
            app:cornerRadius="@dimen/button_main_corner_radius"
            android:fontFamily="@font/yandex_sans_text_medium"
            android:letterSpacing="-0.01"
            android:foreground="?attr/selectableItemBackground"
            android:textSize="@dimen/button_main_size" />
    </LinearLayout>

</LinearLayout>