<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="12dp"
    android:paddingEnd="12dp"
    tools:context=".medialibrary.ui.child_fragment.playlists.PlaylistsFragment">

    <Button
        android:id="@+id/new_playlist_btn"
        style="@style/SampleButton"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="49dp"
        android:text="@string/new_playlist"
        android:visibility="visible"

        app:layout_constraintBottom_toTopOf="@id/placeholder_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/placeholder_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="109dp"
        android:contentDescription="@string/placeholder_image"
        android:src="@drawable/nothing_search"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/placeholder_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/placeholder_message"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="?attr/toolbar_text_color"
        android:textSize="19sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/no_playlists"
        android:textAlignment="center"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/placeholder_image" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/placeholders_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="placeholder_image,placeholder_message" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/playlists"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_playlist_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/view_playlist_item"
        app:layout_constrainedHeight="true"
        tools:itemCount="5" />

</androidx.constraintlayout.widget.ConstraintLayout>